@@ -34,8 +34,13 @@ my $q = new CGI;
 my $r = new CGI::Screen;
 
 while (<DATA>) {
-  print;
-  print "not " if eval "\$q->$_ ne \$r->$_";
+  my $orig = eval "\$q->$_";
+  my $now  = eval "\$r->$_";
+  if ($orig ne $now) {
+    print "Testing $_ failed: '$orig' ne '$now'\n";
+    print;
+    print "not ";
+  }
   print 'ok ', $.+1, "\n";
 }
 __DATA__
