@@ -1,3 +1,10 @@
+Sun Jul 26 16:13:21 1998  Ulrich Pfeifer  <pfeifer@wait.de>
+
+	* t/import.t, t/method.t: tests will work with some older CGI.pm
+ 	Versions also.
+
+	* lib/CGI/Screen.pm (AUTOLOAD): Did propagate destroy.
+
 Sun Jul 12 18:29:43 1998  Ulrich Pfeifer  <pfeifer@wait.de>
 
 	* lib/CGI/Screen.pm (_set_screen): Added dont_cut_loops flag.
